Added name to lint step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
       - image: singapore/lint-condo
     steps:
       - checkout
-      - run: yamllint ./orbs
+      - run:
+          name: Linting orbs
+          command: yamllint ./orbs
 
 workflows:
   version: 2
