--- a/orbs/drupal-8.yml
+++ b/orbs/drupal-8.yml
@@ -21,22 +21,36 @@ commands:
       - run: ./vendor/bin/drush << parameters.alias >> cache-rebuild
 
   phpcs:
-    description: Runs PHP code sniffer for custom code
+    description: |
+      Runs PHP code sniffer with the configured settings. Defaults to running
+      the Drupal coding standard code sniffer on custom modules and only on
+      files containing PHP code.
+
+      This command expects both the PHP CodeSniffer and Drupal coder package
+      to be installed with composer, the command will not install these
+      packages for you.
     parameters:
       extensions:
-        description: Extensions to run the sniffs on
+        description: |
+          Extensions to run the sniffs on, the defaults are common files that
+          may include PHP code.
         type: string
         default: php,module,theme
       ignore:
-        description: Files and folders to ignore
+        description: |
+        Files and folders to ignore when running the sniffs, thedefault will
+        ignore common folders that may exist in a theme or module that is
+        not custom code like build files and node modules.
         type: string
         default: 'node_modules,build'
       paths:
-        description: Paths to sniff
+        description: Paths to run the sniffs on.
         type: string
         default: 'public/modules/custom'
       standard:
-        description: The code standard to use when sniffing
+        description: |
+          The code standard to use when sniffing. This will default to the
+          ruleset provided by the Drupal coder module.
         type: string
         default: './vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml'
     steps:
