--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: yamllint ./orbs
   validate:
     docker:
-      - image: circleci/circleci-cli:0.1.2709
+      - image: circleci/circleci-cli:latest
     steps:
       - checkout
       - run:
