--- a/orbs/deploy.yml
+++ b/orbs/deploy.yml
@@ -47,7 +47,7 @@ commands:
       - run:
           name: Preparing for deployment
           command: |
-            ssh-keyscan -H << parameters.hostname >> >> ~/.ssh/known_hosts
+            ssh-keyscan -p << parameters.port >> -H << parameters.hostname >> >> ~/.ssh/known_hosts
             sudo apt install rsync
       - run:
           name: Deploying files
